https://bugs.webkit.org/show_bug.cgi?id=67885 Outline for the high-resolution broken image icon draws at 2x -and corresponding- <rdar://problem/10104637>

Reviewed by Dan Bernstein.

Scaled the image size to account for the deviceScaleFactor.
* rendering/RenderImage.cpp:
(WebCore::RenderImage::imageSizeForError):



Canonical link: https://commits.webkit.org/83931@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95048 268f45cc-cd09-0410-ab3c-d52691b4dbfc